...
            .fillMaxSize()
            .background(OrangeA100)

    ) {
        val (title, emailTf, passTf, enterBtn, subText, facebookBtn) = createRefs()
        val email = remember { mutableStateOf("") }
        val password = remember { mutableStateOf("") }
        var isEmailValid: MutableState<Boolean> = remember { mutableStateOf(false)}
        var showPassword: Boolean by remember { mutableStateOf(false) }


        Text(
            text = "SIGN IN",
...
                    end.linkTo(parent.end)
                }.testTag("emailtf")
            ,
            isError = !android.util.Patterns.EMAIL_ADDRESS.matcher(email.value).matches(),
            onValueChange = { email.value = it },
            label = { Text(text = "Email address") },
            placeholder = { Text(text = "Type your email") },
            shape = RoundedCornerShape(20.dp),
            colors = androidx.compose.material3.TextFieldDefaults.colors(
                disabledTextColor = Color.Transparent,
                focusedIndicatorColor = Color.Transparent,
                unfocusedIndicatorColor = Color.Transparent,
                disabledIndicatorColor = Color.Transparent
...
